--- a/app/src/main/res/layout/activity_change_phone.xml
+++ b/app/src/main/res/layout/activity_change_phone.xml
@@ -5,8 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include android:id="@+id/changephone_toolbar"
-             layout="@layout/tool_bar"/>
+    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
+                                                android:layout_height="wrap_content">
+        <include android:id="@+id/changephone_toolbar"
+                 layout="@layout/tool_bar"/>
+    </android.support.design.widget.AppBarLayout>
 
     <ViewSwitcher
         android:id="@+id/changePhone_viewSwitcher"
