--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical" android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_width="match_parent" android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <include android:id="@+id/settingactivity_toolbar"
-             layout="@layout/tool_bar"/>
+    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
+                                                android:layout_height="wrap_content">
+        <include android:id="@+id/settingactivity_toolbar"
+                 layout="@layout/tool_bar"/>
+    </android.support.design.widget.AppBarLayout>
     <FrameLayout
         android:id="@+id/setting_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
