--- a/app/src/main/res/layout/fragment_updates.xml
+++ b/app/src/main/res/layout/fragment_updates.xml
@@ -3,10 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <RelativeLayout android:layout_width="match_parent"
+                    android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/updatesFragment_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
+    </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
