--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -7,11 +7,20 @@
     android:layout_height="match_parent"
     tools:context="com.linute.linute.LoginAndSignup.CollegePickerActivity">
 
-    <com.linute.linute.UtilsAndHelpers.MaterialSearchView.MaterialSearchView
-        android:id="@+id/findFriends_search_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"/>
+    <LinearLayout android:id="@+id/findFriends_search_parent"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:background="@color/colorPrimary"
+                  android:elevation="4dp">
+
+        <android.support.v7.widget.SearchView android:id="@+id/findFriends_search_view"
+                                              android:layout_width="match_parent"
+                                              android:layout_height="wrap_content"
+                                              android:layout_margin="8dp"
+                                              android:background="@drawable/search_view_background"
+                                              android:queryHint="Search"/>
+    </LinearLayout>
+
 
     <TextView android:id="@+id/findFriends_text"
               android:layout_width="wrap_content"
@@ -37,7 +46,7 @@
                   android:layout_marginEnd="32dp"
                   android:layout_marginStart="32dp"
                   android:gravity="center"
-                  android:text="To find friends, Tapt needs permission to view your contacts"/>
+                  android:text="@string/need_contant_permission"/>
 
         <TextView android:id="@+id/findFriends_turn_on"
                   android:layout_width="wrap_content"
@@ -45,7 +54,7 @@
                   android:layout_below="@id/findFriends_rat_text"
                   android:layout_centerHorizontal="true"
                   android:padding="10dp"
-                  android:text="Turn on"
+                  android:text="Allow"
                   android:textColor="@color/colorPrimary"
                   android:textSize="15sp"
                   android:textStyle="bold"/>
@@ -63,16 +72,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:onClick="reload"
-            android:visibility="gone"
             android:text="Retry"
+            android:visibility="gone"
         />
 
 
     <android.support.v7.widget.RecyclerView android:id="@+id/findFriends_recycler_view"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
-                                            android:layout_below="@id/findFriends_search_view"
+                                            android:layout_below="@id/findFriends_search_parent"
         />
 
 </RelativeLayout>
