--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -22,12 +22,33 @@
             android:title="Activity"
             app:actionLayout="@layout/main_activity_nav_action_counter"/>
 
-    </group>
+        <item android:id="@+id/navigation_item_settings"
+              android:icon="@drawable/ic_action_action_settings"
+              android:title="Settings"
+            />
 
-    <item android:id="@+id/navigation_item_settings"
-          android:icon="@drawable/ic_action_action_settings"
-          android:title="Settings"
-          />
+        <item android:id="@+id/navigation_item_find_friends_group"
+              android:title="Find Friends"
+              >
+            <menu>
+                <item android:id="@+id/nav_find_by_name"
+                      android:icon="@drawable/search_name"
+                      android:title="Name"/>
+
+                <item android:id="@+id/nav_find_facebook"
+                      android:icon="@drawable/icon_facebook"
+                      android:title="Facebook"
+                      />
+
+                <item android:id="@+id/nav_find_contacts"
+                      android:icon="@drawable/contacts"
+                      android:title="Contacts"/>
+
+            </menu>
+        </item>
+
+
+    </group>
 
 
 </menu>
