--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#142029</color>
+    <color name="colorPrimary">#293F4E</color>
+    <color name="secondaryColor">#67CDC9</color>
     <color name="colorPrimaryDark">#0f181e</color>
     <color name="colorAccent">#1d4261</color>
     <color name="tabsScrollColor">#8a140e</color>
