--- a/app/src/main/res/layout/fragment_profile_header2.xml
+++ b/app/src/main/res/layout/fragment_profile_header2.xml
@@ -66,14 +66,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_vertical">
+                android:layout_gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/follow_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="25dp"
-                    android:id="@+id/follow_button"/>
+                    android:layout_marginStart="25dp"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -84,16 +84,17 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="10dp"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="10dp"
                         android:src="@drawable/profile_student"/>
 
                     <TextView
+                        android:id="@+id/college_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Syracuse University"
+                        android:layout_marginEnd="20dp"
                         android:textColor="#56bb1d"
-                        android:layout_marginEnd="20dp"/>
+                        tools:text="Syracuse University"/>
 
                 </LinearLayout>
             </RelativeLayout>
