--- a/app/src/main/res/layout/fragment_profile_header2.xml
+++ b/app/src/main/res/layout/fragment_profile_header2.xml
@@ -21,6 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            tools:background = "@color/colorPrimary"
             android:orientation="vertical">
 
 
@@ -57,6 +58,8 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="6dp"
                         android:maxLines="3"
+                        android:textColor="@color/white"
+                        tools:text = "TEST TEST TEST TEST test test tes ere erer t"
                         android:textSize="13dp"/>
                 </LinearLayout>
 
@@ -73,6 +76,7 @@
                     android:id="@+id/follow_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:layout_marginStart="25dp"/>
 
                 <LinearLayout
@@ -120,7 +124,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingBottom="6dp"
                 android:paddingTop="10dp"
-                android:text="Post"
+                android:text="Posts"
                 android:textColor="@android:color/white"/>
 
             <TextView
