--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -29,6 +29,7 @@
               android:layout_marginTop="150dp"
               android:layout_marginEnd="64dp"
               android:layout_marginStart="64dp"
+              android:layout_centerHorizontal="true"
               android:gravity="center"
               android:textSize="18sp"
               android:visibility="invisible"
