--- a/app/src/main/res/layout/activity_post_content_page.xml
+++ b/app/src/main/res/layout/activity_post_content_page.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:background="#00000000"
                 android:hint="@string/describe_event"
-                android:inputType="textCapSentences"
+                android:inputType="textCapSentences|textMultiLine"
                 android:maxHeight="125dp"
                 android:maxLength="200"
                 android:textSize="14sp"
