--- a/app/src/main/res/drawable/post_likes_selector.xml
+++ b/app/src/main/res/drawable/post_likes_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/heart" android:state_checked="false"/>
-    <item android:drawable="@drawable/heart_red" android:state_checked="true"/>
-    <item android:drawable="@drawable/heart"/>
+    <item android:drawable="@drawable/ic_action_favorite_outline" android:state_checked="false"/>
+    <item android:drawable="@drawable/ic_icon_like_copy" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_action_favorite_outline"/>
     <!-- default state -->
 </selector>
