--- a/app/src/main/res/layout/fragment_feed_detail_page_head.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_head.xml
@@ -46,7 +46,7 @@
             android:gravity="center"
             android:text="TEXT"
             android:textAppearance="@android:style/TextAppearance.Large"
-            android:textColor="@color/user_name_color"
+            android:textColor="@color/user_name_blue"
             android:textSize="20sp"/>
     </RelativeLayout>
 
