--- a/app/src/main/res/layout/fragment_people_list_item.xml
+++ b/app/src/main/res/layout/fragment_people_list_item.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:textColor="@color/user_name_color"
+            android:textColor="@color/user_name_blue"
             android:textStyle="bold"
             tools:text="NAME"/>
 
