--- a/app/src/main/res/layout/fragment_people_nearby.xml
+++ b/app/src/main/res/layout/fragment_people_nearby.xml
@@ -41,7 +41,7 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:singleLine="true"
-                      android:textColor="@color/user_name_color"
+                      android:textColor="@color/user_name_blue"
                       android:textStyle="bold"
                       tools:text="Person Name"
                 />
